// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`infoColumn > no button 1`] = `
<section
  class="sticky top-2.5 mt-2.5 mr-0 w-full md:float-right md:-mr-75 md:w-70"
>
  <aside
    class="border border-detail mb-5 box-border block shadow-sm"
  >
    <h3
      class="border border-detail text-dark px-3 py-2 text-sm font-bold select-none"
    >
      Info!
    </h3>
    <div
      class="px-5 pt-1.5 pb-5 text-sm"
    >
      <p>
        <input
          name="foo"
        />
      </p>
    </div>
  </aside>
  <aside
    class="border border-detail mb-5 box-border block shadow-sm"
  >
    <div
      class="px-5 pt-1.5 pb-5 text-sm"
    >
      <p>
        <input
          name="bar"
        />
      </p>
    </div>
  </aside>
</section>
`;

exports[`infoColumn > no props 1`] = `
<section
  class="sticky top-2.5 mt-2.5 mr-0 w-full md:float-right md:-mr-75 md:w-70"
/>
`;

exports[`infoColumn > with button 1`] = `
<section
  class="sticky top-2.5 mt-2.5 mr-0 w-full md:float-right md:-mr-75 md:w-70"
>
  <aside
    class="border border-detail mb-5 box-border block shadow-sm"
  >
    <h3
      class="border border-detail text-dark px-3 py-2 text-sm font-bold select-none"
    >
      Info!
    </h3>
    <div
      class="px-5 pt-1.5 pb-5 text-sm"
    >
      <p>
        <input
          name="foo"
        />
      </p>
      <button
        type="button"
      >
        Submit
      </button>
    </div>
  </aside>
  <aside
    class="border border-detail mb-5 box-border block shadow-sm"
  >
    <div
      class="px-5 pt-1.5 pb-5 text-sm"
    >
      <p>
        <input
          name="bar"
        />
      </p>
    </div>
  </aside>
</section>
`;

exports[`infoColumn > with info and meta fields 1`] = `
<section
  class="sticky top-2.5 mt-2.5 mr-0 w-full md:float-right md:-mr-75 md:w-70"
>
  <aside
    class="border border-detail mb-5 box-border block shadow-sm"
  >
    <h3
      class="border border-detail text-dark px-3 py-2 text-sm font-bold select-none"
    />
    <div
      class="px-5 pt-1.5 pb-5 text-sm"
    >
      <p>
        <input
          name="foo"
        />
      </p>
    </div>
  </aside>
  <aside
    class="border border-detail mb-5 box-border block shadow-sm"
  >
    <div
      class="px-5 pt-1.5 pb-5 text-sm"
    >
      <p>
        <input
          name="bar"
        />
      </p>
    </div>
  </aside>
</section>
`;

exports[`infoColumn > with infoFields 1`] = `
<section
  class="sticky top-2.5 mt-2.5 mr-0 w-full md:float-right md:-mr-75 md:w-70"
>
  <aside
    class="border border-detail mb-5 box-border block shadow-sm"
  >
    <h3
      class="border border-detail text-dark px-3 py-2 text-sm font-bold select-none"
    />
    <div
      class="px-5 pt-1.5 pb-5 text-sm"
    >
      <p>
        <input
          name="foo"
        />
      </p>
    </div>
  </aside>
</section>
`;

exports[`infoColumn > with metaFields 1`] = `
<section
  class="sticky top-2.5 mt-2.5 mr-0 w-full md:float-right md:-mr-75 md:w-70"
>
  <aside
    class="border border-detail mb-5 box-border block shadow-sm"
  >
    <div
      class="px-5 pt-1.5 pb-5 text-sm"
    >
      <p>
        <input
          name="bar"
        />
      </p>
    </div>
  </aside>
</section>
`;
